WIP;  Moved app secrets

--- a/Overture.Web/clientapp/src/app/modules/business-listing/business-profile/attachments-carousel/attachments-carousel.component.html
+++ b/Overture.Web/clientapp/src/app/modules/business-listing/business-profile/attachments-carousel/attachments-carousel.component.html
@@ -1,4 +1,4 @@
-<div class="boxed-list margin-bottom-60" *ngIf="attachments.length > 0">
+<div class="boxed-list margin-bottom-60" *ngIf="attachments && attachments.length > 0">
   <div class="boxed-list-headline margin-bottom-20">
     <h3><i class="icon-material-outline-library-books"></i> Gallery ({{attachments.length}})</h3>
   </div>
