--- a/Overture.Web/clientapp/src/app/modules/business-listing/business-profile/business-reviews-list/business-reviews-list.component.html
+++ b/Overture.Web/clientapp/src/app/modules/business-listing/business-profile/business-reviews-list/business-reviews-list.component.html
@@ -4,64 +4,29 @@
 					<h3><i class="icon-material-outline-thumb-up"></i> Reviews</h3>
 				</div>
 				<ul class="boxed-list-ul">
-					<li>
+					<li *ngFor="let review of reviews"> 
 						<div class="boxed-list-item">
 							<!-- Content -->
 							<div class="item-content">
-								<h4>Web, Database and API Developer <span>Rated as Freelancer</span></h4>
+								<h4> {{review.reviewerName}} <span>General review </span></h4>
 								<div class="item-details margin-top-10">
-									<div class="star-rating" data-rating="5.0"></div>
-									<div class="detail-item"><i class="icon-material-outline-date-range"></i> August 2018</div>
+									<div appStarRating class="star-rating" [rating]="review.rating*1.0"></div>
+									<div class="detail-item"><i class="icon-material-outline-date-range"></i> {{ review.reviewDate | date:short }}</div>
 								</div>
 								<div class="item-description">
-									<p>Excellent programmer - fully carried out my project in a very professional manner. </p>
+									<p>{{review.content}} </p>
 								</div>
 							</div>
 						</div>
 					</li>
-					<li>
-						<div class="boxed-list-item">
-							<!-- Content -->
-							<div class="item-content">
-								<h4>WordPress Theme Installation <span>Rated as Freelancer</span></h4>
-								<div class="item-details margin-top-10">
-									<div class="star-rating" data-rating="5.0"></div>
-									<div class="detail-item"><i class="icon-material-outline-date-range"></i> June 2018</div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="boxed-list-item">
-							<!-- Content -->
-							<div class="item-content">
-								<h4>Fix Python Selenium Code <span>Rated as Employer</span></h4>
-								<div class="item-details margin-top-10">
-									<div class="star-rating" data-rating="5.0"></div>
-									<div class="detail-item"><i class="icon-material-outline-date-range"></i> May 2018</div>
-								</div>
-								<div class="item-description">
-									<p>I was extremely impressed with the quality of work AND how quickly he got it done. He then offered to help with another side part of the project that we didn't even think about originally.</p>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="boxed-list-item">
-							<!-- Content -->
-							<div class="item-content">
-								<h4>PHP Core Website Fixes <span>Rated as Freelancer</span></h4>
-								<div class="item-details margin-top-10">
-									<div class="star-rating" data-rating="5.0"></div>
-									<div class="detail-item"><i class="icon-material-outline-date-range"></i> May 2018</div>
-								</div>
-								<div class="item-description">
-									<p>Awesome work, definitely will rehire. Poject was completed not only with the requirements, but on time, within our small budget.</p>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
+        </ul>
+        
+
+        <!-- Button -->
+        <div class="clearfix"></div>
+				
+				<a href="" *ngIf="isUserAuthenticated"  (click)="addReview($event)" class="apply-now-button popup-with-zoom-anim margin-bottom-30 margin-top-50">Leave a Review <i class="icon-material-outline-arrow-right-alt"></i></a>
+        
 
 				<!-- Pagination -->
 				<div class="clearfix"></div>
