--- a/Overture.Web/clientapp/src/app/modules/management/management-account-settings/management-account-settings.component.html
+++ b/Overture.Web/clientapp/src/app/modules/management/management-account-settings/management-account-settings.component.html
@@ -30,17 +30,17 @@
           <div class="col">
             <div class="row">
 
-              <div class="col-xl-6">
+              <div class="col-xl-12">
                 <div class="submit-field">
-                  <h5>First Name</h5>
+                  <h5>Name</h5>
                   <input type="text" class="with-border" value="Tom">
                 </div>
               </div>
 
               <div class="col-xl-6">
                 <div class="submit-field">
-                  <h5>Last Name</h5>
-                  <input type="text" class="with-border" value="Smith">
+                  <h5>Email</h5>
+                  <input type="text" class="with-border" value="tom@example.com">
                 </div>
               </div>
 
@@ -62,13 +62,7 @@
                 </div>
               </div>
 
-              <div class="col-xl-6">
-                <div class="submit-field">
-                  <h5>Email</h5>
-                  <input type="text" class="with-border" value="tom@example.com">
-                </div>
-              </div>
-
+             
             </div>
           </div>
         </div>
